--- a/Main.html
+++ b/Main.html
@@ -12,6 +12,15 @@
             const nextSection = document.getElementById('experience');
             nextSection.scrollIntoView({ behavior: 'smooth' });
           }
+          function openModal(modalId) {
+            document.getElementById(modalId).style.display = 'block';
+            document.body.classList.add('modal-active');
+          }
+
+          function closeModal(modalId) {
+              document.getElementById(modalId).style.display = 'none';
+              document.body.classList.remove('modal-active');
+          }
         </script>
     </head>
 
@@ -28,7 +37,7 @@
       </nav>
 
       <div id="introContainer">
-        <img id="headshot" src="/assets/Images/testSquare.png">
+        <img id="headshot" src="/assets/Images/headshot.jpg">
         <div>
           <h1 id="introHeaderText">
             Hi, I'm Jordyn!
@@ -46,47 +55,51 @@
         <button class="scroll-button" onclick="scrollToNextSection()">↓</button>
       </div>
 
+      <!-- Work term experience -->
+
       <div id="experience">  
         <h1>Work Terms</h1>
         <div class="grid-container">
           <div class="grid-item" id="CRC">
               <img src="/assets/Images/CRCLogo.png" alt="Description of Image 1" class="grid-image">
-              <p class="grid-text">Communications Research Centre Canada</p>
-              <p>Software Development Student</p>
-              <p>May 2024 - August 2024</p>
-              <p>I worked on a map based web application used by researchers to visualize 5G networks 
+              <p>Communications Research Centre Canada <br>
+              Software Development Student <br>
+              May 2024 - August 2024</p>
+              <p>
+                I worked on a map based web application used by researchers to visualize 5G networks 
                 and interference simulation results. I used React to add features to the application along with 
                 JavaScript libraries such as Leaflet for map components and Plotly.js for displaying data.
               </p>
           </div>
 
-          <div class="grid-item" id="avalonHolographics">
+          <div class="grid-item" id="avalonHolographics" >
               <img src="/assets/Images/AvalonLogo.png" alt="Description of Image 2" class="grid-image">
-              <p class="grid-text">Avalon Holographics</p>
-              <p>Software Development Co-op Student</p>
-              <p>September 2023 - December 2023</p>
+              <p>Avalon Holographics <br>
+              Software Development Co-op Student <br>
+              September 2023 - December 2023</p>
               <p>I worked on a battle space simulation desktop application. The application is desgined to be used on
                 Avalon's Holographics' 3D displays. The app features a 3D render of earth and allows users to upload 3D
                 tilesets of any city and display them on the 3D displays. I used C++ along with the ImGui library to add features
                 to the application. I also used HLSL to add different shading effects.
               </p>
           </div>
-          <div class="grid-item">
+          <div class="grid-item" >
               <img src="/assets/Images/BellLogo.png" alt="Description of Image 3" class="grid-image">
-              <p class="grid-text">Bell Canada</p>
-              <p>Network Specialist Student</p>
-              <p>January 2023 - April 2023</p>
-              <p>I was a member of the Access Engineering team in St. John's, NL. This team is focused on
-                expanding Bell's fibre optic internet services to rural communities across Newfoundland. During
-                my time with the team I completed various upgrades to their Microsoft Access database including automating
-                data entry and I created a script to sort house addresses from across the province. 
-              </p>
+              <p class="grid-text">Bell Canada <br>
+                Network Speacialist Student <br>
+                January 2023 - April 2023
+             </p>
+             <p>I was a member of the Access Engineering team in St. John's, NL. This team is focused on
+              expanding Bell's fibre optic internet services to rural communities across Newfoundland. During
+              my time with the team I completed various upgrades to their Microsoft Access database including automating
+              data entry and I created a script to sort house addresses from across the province. 
+            </p>
           </div>
           <div class="grid-item">
               <img src="/assets/Images/CahillLogo.png" alt="Description of Image 4" class="grid-image">
-              <p class="grid-text">The Cahill Group</p>
-              <p>Project Management Student</p>
-              <P>May 2022 - August 2022</P>
+              <p class="grid-text">The Cahill Group <br>
+              Project Management Student <br>
+              May 2022 - August 2022</p>
               <p>During my time with the company I worked as a project manager. I ordered materials and tools for various construction jobs across
                 the province and completed safety walkthroughs and documentation. I also preformed a cost estimate 
                 for a medical gas piping upgrade for Newfoundland's largest hospital.
@@ -95,24 +108,30 @@
         </div>
       </div>
 
+
+
+      <!-- Involvement section -->
+
       <div id="extracurriculars">  
         <h1>Extracurriculars</h1>
         <div class="grid-container">
-          <div class="grid-item" id="EOSuccessCentre">
-              <img src="/assets/Images/CRCLogo.png" alt="Description of Image 1" class="grid-image">
-              <p class="grid-text">Engineering One Student Success Centre</p>
-              <p> I have been a tutor at MUN's Engineering One Success Centre since my second year of 
-                university. Each semester myself and the other tutors offer assitance to first year engineering 
-                students. I tutor students in math, physics and programming.
+          <div class="grid-item" id="IcebergASV">
+              <img src="/assets/Images/IcebergLogo.png" class="grid-image">
+              <p>Iceberg ASV <br>
+                Software Team Member <br>
+                July 2023 - Present</p>
+              <p> Iceberg ASV is a student design team at MUN. We build a self drving boat from scratch and compete at RoboBoats annual competition in Florida. I am 
+                a member of the software team where myself and the other members write code that enables the boat to autonomously navigate through obstacle courses at competions.
+                Recently I joined 7 other team members at the annual Njord Autonomous Ship Challenge in Trondheim, Norway where we placed fifth overall.
               </p>
           </div>
-          <div class="grid-item" id="IcebergASV">
-              <img src="/assets/Images/AvalonLogo.png" alt="Description of Image 2" class="grid-image">
-              <p class="grid-text">IcebergASV</p>
-              <p>Iceberg ASV is a student design team at MUN. We compete annually at RoboBoats competiton in Florida 
-                and recently we competed in the Njord Autonomous Ship Challenge in Norway. I am a member of the software team.
-                Myself and the other memebers write code using C++ along with ROS2 to allow the student built boat to
-                complete tasks related to navigation, manuevering and docking autonomously.
+          <div class="grid-item" id="EOSuccessCentre">
+              <img src="/assets/Images/AvalonLogo.png" class="grid-image">
+              <p>Engineering One Student Success Centre <br>
+                Tutor<br>
+                September 2022 - Present</p>
+              <p>The Success Centre is a tutoring service offered to first year engineering students at MUN. I tutor at the centre every semester. I help students with
+                math, physics and programming assignments and once hosted a Python tutorial to help students prepare for their programming class's final exam. 
               </p>
           </div>
           <div class="grid-item" id="GWG">
@@ -126,6 +145,14 @@
         </div>
       </div>
 
+      <!-- Involvement popup details -->
+
+      
+
+
+
+
+      
     </body>
 
 </html>
