Fixing issue with photos

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </nav>
 
       <div id="introContainer">
-        <img id="headshot" src="/assets/Images/headshot.jpg">
+        <img id="headshot" src="assets/Images/headshot.jpg">
         <div>
           <h1 id="introHeaderText">
             Hi, I'm Jordyn!
