Fixing issue with photos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav class="navbar">
         <div class="logo">Jordyn O'Brien</div>
         <ul class="nav-buttons">
-            <li><a href="/assets/Resume.pdf">Resume</a></li>
+            <li><a href="assets/Resume.pdf">Resume</a></li>
             <li><a href="https://www.linkedin.com/in/jordynob/">LinkedIn</a></li>
             <li><a href="https://github.com/jordyob03">Github</a></li>
         </ul>
@@ -44,8 +44,8 @@
           </h1>
           <p id="introText">
             I'm a fourth year engineering student at Memorial University of Newfoundland. I am interested in various fields of software development such as robotics, 
-            simulation development and graphics programming. I have experience in desktop application development, web development and ROS development. This website
-            is meant to highlight my experience, projects, and achievements.
+            simulation development and graphics programming. I have experience in desktop application development, web development and robotics. I made this website
+            to highlight my experience, projects, and achievements.
           </p>
         </div>
       </div>
@@ -61,7 +61,7 @@
         <h1>Work Terms</h1>
         <div class="grid-container">
           <div class="grid-item" id="CRC">
-              <img src="/assets/Images/CRCLogo.png" alt="Description of Image 1" class="grid-image">
+              <img src="assets/Images/CRCLogo.png" alt="Description of Image 1" class="grid-image">
               <p><a href="https://ised-isde.canada.ca/site/communications-research-centre-canada/en">Communications Research Centre</a> <br>
               Software Development Student <br>
               May 2024 - August 2024</p>
@@ -73,18 +73,18 @@
           </div>
 
           <div class="grid-item" id="avalonHolographics" >
-              <img src="/assets/Images/AvalonLogo.png" alt="Description of Image 2" class="grid-image">
+              <img src="assets/Images/AvalonLogo.png" alt="Description of Image 2" class="grid-image">
               <p><a href="https://www.avalonholographics.com/">Avalon Holographics</a><br>
               Software Development Co-op Student <br>
               September 2023 - December 2023</p>
               <p>I worked on a battle space simulation desktop application. The application is desgined to be used on
-                Avalon's Holographics' 3D displays. The app features a 3D render of earth and allows users to upload 3D
-                tilesets of any city and display them on the 3D displays. I used C++ along with the ImGui library to add features
+                Avalon's Holographics' 3D displays. The app features a 3D render of the earth and allows users to upload 3D
+                tilesets of any city and display them on the 3D displays. I used C++ along with ImGui to add features
                 to the application. I also used HLSL to add different shading effects.
               </p>
           </div>
           <div class="grid-item" >
-              <img src="/assets/Images/BellLogo.png" alt="Description of Image 3" class="grid-image">
+              <img src="assets/Images/BellLogo.png" alt="Description of Image 3" class="grid-image">
               <p class="grid-text"><a href="https://www.bell.ca/">Bell Canada</a><br>
                 Network Speacialist Student <br>
                 January 2023 - April 2023
@@ -96,7 +96,7 @@
             </p>
           </div>
           <div class="grid-item">
-              <img src="/assets/Images/CahillLogo.png" alt="Description of Image 4" class="grid-image">
+              <img src="assets/Images/CahillLogo.png" alt="Description of Image 4" class="grid-image">
               <p class="grid-text"><a href="https://cahill.ca/">The Cahill Group </a><br>
               Project Management Student <br>
               May 2022 - August 2022</p>
@@ -116,7 +116,7 @@
         <h1>Extracurriculars</h1>
         <div class="grid-container">
           <div class="grid-item" id="IcebergASV">
-              <img src="/assets/Images/IcebergLogo.png" class="grid-image">
+              <img src="assets/Images/IcebergLogo.png" class="grid-image">
               <p><a href="https://www.icebergasv.ca/">Iceberg ASV</a><br>
                 Software Team Member <br>
                 July 2023 - Present</p>
@@ -126,7 +126,7 @@
               </p>
           </div>
           <div class="grid-item" id="EOSuccessCentre">
-              <img src="/assets/Images/EOSuccess.jpg" class="grid-image">
+              <img src="assets/Images/EOSuccess.jpg" class="grid-image">
               <p><a href="https://www.mun.ca/engineering/undergraduate/engineering-one/eo-student-success-centre/">Engineering One Student Success Centre</a><br>
                 Tutor<br>
                 September 2022 - Present</p>
@@ -135,12 +135,12 @@
               </p>
           </div>
           <div class="grid-item" id="GWG">
-              <img src="/assets/Images/DellLogo.png" class="grid-image">
+              <img src="assets/Images/DellLogo.png" class="grid-image">
               <p><a href="https://www.dell.com/en-ca/dt/corporate/social-impact/transforming-lives/education/girls-who-game.htm#tab0=0">Dell Technologies Girls Who Game </a><br>
                 Volunteer<br>
                 September 2023 - Present</p>
               <p>Girls Who Game is program for young girls across North America that allows them to develop STEM and leadership skills through gaming initiatives. I volunteer with
-                this program as a mentor and judge where I send contrustive feedback on submissions from teams of participants,
+                this program as a mentor and judge where I send contrustive feedback on submissions from teams of participants.
               </p>
           </div>
         </div>
@@ -152,14 +152,14 @@
         <h1>Projects</h1>
         <div class="grid-container">
           <div class="grid-item" id="Website">
-              <img src="/assets/Images/WebsiteIcon.png" class="grid-image">
+              <img src="assets/Images/WebsiteIcon.png" class="grid-image">
               <p><a href="https://github.com/jordyob03/Portfolio-Website">This website</a><br>
                 September 2024</p>
               <p> I built this website using JavaScript, HTML & CSS to showcase my experience and achievements while improving my web development skills.
               </p>
           </div>
           <div class="grid-item" id="PhotoEditor">
-              <img src="/assets/Images/photoEditor.png" class="grid-image">
+              <img src="assets/Images/photoEditor.png" class="grid-image">
               <p><a href="https://github.com/jordyob03/DesktopPhotoEditor">Desktop Photo Editor</a><br>
                 March 2024</p>
               <p> Myself and one of my classmates created a desktop photo editor application for a software development course we took in school. The application is 
