--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             Hi, I'm Jordyn!
           </h1>
           <p id="introText">
-            I'm a fourth year engineering student at Memorial University of Newfoundland. I am interested in various fields of software development such as robotics, 
+            I'm a fourth year Computer Engineering student at Memorial University of Newfoundland in search of a work term for the winter 2025 semester. I am interested in various fields of software development such as robotics, 
             simulation development and graphics programming. I have experience in desktop application development, web development and robotics. I made this website
             to highlight my experience, projects, and achievements.
           </p>
