--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Jordyn O'Brien</title>
         <link rel="stylesheet" href="assets/CSS/mainStyle.css">
-        <base href="https://jordyob03.github.io/Portfolio-Website/">
+        <base href="https://jordyob03.github.io/Portfolio/">
         <script>
           function scrollToNextSection() {
             const nextSection = document.getElementById('experience');
